BitcoindComparisonTool, FullBlockTestGenerator, FullPrunedBlockChainTest, BlockFileLoaderTest: use Java 17 features
Apply a handful of simple Java language 8 to 17 upgrades.